spec/errors/syntax/unclosed_groups.lang
#
# Unclosed Group Expressions
#

(
  a + b * (
    c / d
  ) + e
